Testimonials section deleted

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
           -->
-            Designed by <a href="https://bootstrapmade.com/">Juan P. Romano</a>
+            Designed by <a href="https://jpromano.net" target="_blank">Juan P. Romano</a>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
