Testimonials section deleted

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright, All Rights Reserved - 2023</p>
           <div class="credits">
             Designed by <a href="https://jpromano.net" target="_blank">Juan P. Romano</a>
           </div>
