--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="#"><span class="bi bi-twitter"></span></a>
+          <a href="https://twitter.com/jpromanonet"><span class="bi bi-twitter"></span></a>
           <a href="#"><span class="bi bi-instagram"></span></a>
           <a href="#"><span class="bi bi-linkedin"></span></a>
         </div>
