--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="col-sm-6 social text-md-end">
           <a href="https://twitter.com/jpromanonet"><span class="bi bi-twitter"></span></a>
           <a href="https://instagram.com/jpromanonet"><span class="bi bi-instagram"></span></a>
-          <a href="#"><span class="bi bi-linkedin"></span></a>
+          <a href="https://linkedin.com/in/jpromanonet"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
