Editing projects template page

--- a/project_template.html
+++ b/project_template.html
@@ -118,22 +118,15 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright, All Rights Reserved - 2023</p>
           <div class="credits">
-            <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
-          -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Designed by <a href="https://jpromano.net" target="_blank">Juan P. Romano</a>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="#"><span class="bi bi-twitter"></span></a>
-          <a href="#"><span class="bi bi-facebook"></span></a>
-          <a href="#"><span class="bi bi-instagram"></span></a>
-          <a href="#"><span class="bi bi-linkedin"></span></a>
+          <a href="https://twitter.com/jpromanonet" target="_blank"><span class="bi bi-twitter"></span></a>
+          <a href="https://instagram.com/jpromanonet" target="_blank"><span class="bi bi-instagram"></span></a>
+          <a href="https://linkedin.com/in/jpromanonet" target="_blank"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
